--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "particles-bg": "^2.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
